--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "chart.js": "^3.7.0",
     "core-js": "^3.6.5",
-    "firebase": "^9.6.1",
+    "firebase": "^9.6.2",
     "gsap": "^3.9.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
